fabric/testdata/out/ing_brexit-indexer-test-dagordon-statsd-exporter-default-404-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(404) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":404,\\\"detail\\\":\\\"Gateway
      Route Not Matched\\\"}\") -\u003e \u003cshunt\u003e"},"labels":{"application":"brexit","component":"statsd-exporter","controller-uid":"81ed9ca1-c81e-4b9e-8f0e-3c80be35616b","deployment-id":"d-493zaepnaytoxkxiq596reh9h","environment":"review","pipeline-id":"l-ngeow7caio7qdeiqsrnrfprjh","version":"pr-39-1"},"name":"brexit-indexer-test-dagordon-statsd-exporter-default-404-route","namespace":"default"},"spec":{"rules":[{"host":"brexit-indexer-test-dagordon-statsd-exporter.smart-product-platfor [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") -> oauthTokeninfoAllScope("uid")
      -> unverifiedAuditLog("sub") -> status(404) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":404,\"detail\":\"Gateway Route Not Matched\"}") -> <shunt>
  creationTimestamp: "2021-06-10T09:19:09Z"
  generation: 1
  labels:
    application: brexit
    component: statsd-exporter
    controller-uid: 81ed9ca1-c81e-4b9e-8f0e-3c80be35616b
    deployment-id: d-493zaepnaytoxkxiq596reh9h
    environment: review
    pipeline-id: l-ngeow7caio7qdeiqsrnrfprjh
    version: pr-39-1
  name: brexit-indexer-test-dagordon-statsd-exporter-default-404-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: brexit-indexer-test-dagordon-statsd-exporter
    uid: 81ed9ca1-c81e-4b9e-8f0e-3c80be35616b
  resourceVersion: "1357488299"
  uid: b2e62551-d16e-4600-9acb-4765a1dd7164
spec:
  rules:
  - host: brexit-indexer-test-dagordon-statsd-exporter.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: brexit-indexer-test-dagordon-statsd-exporter
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
